changed display of q's and a's to none

--- a/Vicereine Website/css/style.css
+++ b/Vicereine Website/css/style.css
@@ -81,10 +81,12 @@ h2 {
 
 h4 {
 	margin: 5px auto 5px 15px;
+	display: none;
 }
 
 p {
 	margin: 5px 15px 20px 80px;
 	font-size: 17px;
 	color: #26EDED;
+	display: none;
 }
