--- a/Vicereine Website/css/style.css
+++ b/Vicereine Website/css/style.css
@@ -73,10 +73,11 @@ h2 {
 }
 
 .faq {
-	border: 3px solid;
+	border: 4px solid;
 	width: 460px;
 	margin: auto;
 	text-align: left;
+	padding-bottom: 8px;
 }
 
 h4 {
