--- a/Vicereine Website/css/style.css
+++ b/Vicereine Website/css/style.css
@@ -20,6 +20,8 @@ body {
 	display: inline-block;
 	vertical-align: bottom;
 	margin: 3px 1px;
+	-moz-box-shadow: -1px -1px 0 1px black;
+    -webkit-box-shadow: -1px -1px 0 1px black;
 	box-shadow: inset -1px -1px 0 1px black;
 } 
 
@@ -55,11 +57,11 @@ a {
 }
 
 a:link {
-	color: #D830D0;
+	color: #DB30D0;
 }
 
 a:visited {
-	color: #D830D0;
+	color: #DB30D0;
 }
 
 a:hover {
@@ -75,10 +77,11 @@ h2 {
 
 .faq {
 	border: 4px solid;
-	width: 460px;
+	width: 494px;
 	margin: auto;
 	text-align: left;
 	padding-bottom: 8px;
+	border-radius: 6px 0 6px 0;
 }
 
 h4 {
